error in images with same names but uppercase (windows not supported)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -38,7 +38,7 @@
         
         <div [ngSwitch]="p.title">
 
-        <div style="text-align:left" *ngSwitchCase="'Wallet'"><img src="app-assets/imgs/wallet.svg" width="20" height="20" align="top">&nbsp;<b>{{p.title}}</b></div>
+        <div style="text-align:left" *ngSwitchCase="'Wallet'"><img src="app-assets/imgs/wallet-2.svg" width="20" height="20" align="top">&nbsp;<b>{{p.title}}</b></div>
         <!-- Trading -->
         <div *ngSwitchCase="'Exchange'"><img class="info" src="app-assets/imgs/trading.svg" width="20" height="20"><b>Exchange</b></div>
         <div style="text-align:left" *ngSwitchCase="'Network Status'"><ion-icon name="ios-cloud-upload-outline"></ion-icon>&nbsp;<b>{{p.title}}</b></div>
